syntax = "proto3";

package user;
option go_package = "github.com/sibobbbbbb/backend-engineer-challenge/proto/user";

service UserService {
  rpc Register (RegisterRequest) returns (UserResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc GetUser (GetUserRequest) returns (UserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string fullname = 4;
  string role = 5;
  string created_at = 6;
  string updated_at = 7;
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string fullname = 4;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  User user = 1;
  string token = 2;
}

message GetUserRequest {
  string id = 1;
}

message UpdateUserRequest {
  string id = 1;
  string username = 2;
  string email = 3;
  string fullname = 4;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
  string username = 3;
  string role = 4;
}

message UserResponse {
  User user = 1;
}